--- a/src/components/collection-items/collectionItem-style.scss
+++ b/src/components/collection-items/collectionItem-style.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -17,16 +17,16 @@
     width: 80%;
     opacity: 0.7;
     position: absolute;
-    top : 255px;
-    display : none;
+    top: 255px;
+    display: none;
   }
   &:hover {
     .image {
       opacity: 0.8;
     }
     .custom-button {
-      opacity : 0.85;
-      display : flex;
+      opacity: 0.85;
+      display: flex;
     }
   }
   .collection-footer {
