--- a/src/pages/checkout.scss
+++ b/src/pages/checkout.scss
@@ -28,4 +28,14 @@
     margin-left: auto;
     font-size: 36px;
   }
+  .stripe-button {
+    margin-left: auto;
+    margin-top: 50px;
+  }
+  .test-warning {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 24px;
+    color: red;
+  }
 }
